Nav Bar Added to 4 Pages

--- a/Page2.html
+++ b/Page2.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page 2</title>
+    <link rel="stylesheet" href="Style.Css">
 </head>
 <body>
-    
+    <div>
+        <ul>
+            <li class="Nav"><a href="index.html">HomePage</a></li>
+            <li class="Nav"><a href="Page2.html">Page 2</a></li>
+            <li class="Nav"><a href="Page3.html">Page 3</a></li>
+            <li class="Nav"><a href="Page4.html">Page 4</a></li>
+        </ul>
+    </div>
 </body>
 </html>
