--- a/Page4.html
+++ b/Page4.html
@@ -9,10 +9,11 @@
 <body>
     <div>
         <ul>
-            <li class="Nav"><a href="index.html">HomePage</a></li>
             <li class="Nav"><a href="Page2.html">Page 2</a></li>
             <li class="Nav"><a href="Page3.html">Page 3</a></li>
             <li class="Nav"><a href="Page4.html">Page 4</a></li>
+            <li class="Nav"><a href="index.html">HomePage</a></li>
+            <li class="NavImg"><img class="ImgStyle" src="https://image.cnbcfm.com/api/v1/image/105712457-1548958114472gettyimages-914246230.jpeg?v=1549290188" alt="Img Failed"></li>
         </ul>
     </div>
 </body>
