--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li class="Nav"><a href="Page3.html">Page 3</a></li>
             <li class="Nav"><a href="Page4.html">Page 4</a></li>
             <li class="Nav"><a href="index.html">HomePage</a></li>
-            <li class="NavImg"><img class="ImgStyle" src="https://image.cnbcfm.com/api/v1/image/105712457-1548958114472gettyimages-914246230.jpeg?v=1549290188" alt="Img Failed"></li>
+            <li class="NavImg"><img class="ImgStyle" src="https://i.pinimg.com/originals/b4/21/61/b4216147c4d4d914152b615b8544c7cf.png" alt="Img Failed"></li>
         </ul>
     </div>
 </body>
