--- a/Page3.html
+++ b/Page3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 3</title>
+    <title>offer page 2</title>
     <link rel="stylesheet" href="Style.Css">
 </head>
 <body>
