Fixed Page clarity
Fixed/Agusted Page:
Titles, Links, Navbar Names and File Names

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about us page</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="Style.Css">
 </head>
 <body>
     <div>
         <ul>
-            <li class="Nav"><a href="Page2.html">Page 2</a></li>
-            <li class="Nav"><a href="Page3.html">Page 3</a></li>
-            <li class="Nav"><a href="Page4.html">Page 4</a></li>
-            <li class="Nav"><a href="index.html">HomePage</a></li>
+            <li class="Nav"><a href="AboutUs.html">About Us</a></li>
+            <li class="Nav"><a href="Offer2.html">Offers International</a></li>
+            <li class="Nav"><a href="Offer1.html">Offers Domestic</a></li>
+            <li class="Nav"><a href="index.html">Home</a></li>
             <li class="NavImg"><img class="ImgStyle" src="https://i.pinimg.com/originals/b4/21/61/b4216147c4d4d914152b615b8544c7cf.png" alt="Img Failed"></li>
         </ul>
     </div>
