--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
                         About us</a>
                 </li>
                 <li class="Nav">
-                    <a href="Offer2.html">
-                        Offer International</a>
-                </li>
-                <li class="Nav">
-                    <a href="Offer1.html">
-                        Offer Domestic</a>
+                    <a href="Offers.html">
+                        Offers</a>
                 </li>
                 <li class="Nav">
                     <a href="index.html">
