--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,13 +9,19 @@
 <body>
     <div>
         <ul>
-            <li class="Nav"><a href="AboutUs.html">About Us</a></li>
-            <li class="Nav"><a href="Offers.html">Offers</a></li>
-            <li class="Nav"><a href="index.html">Home</a></li>
-            <li class="NavImg"><img class="ImgStyle" src="https://i.pinimg.com/originals/b4/21/61/b4216147c4d4d914152b615b8544c7cf.png" alt="Img Failed"></li>
+            <li class="Nav">
+                <a href="AboutUs.html">About Us</a>
+            </li>
+            <li class="Nav">
+                <a href="Offers.html">Offers</a>
+            </li>
+            <li class="Nav">
+                <a href="index.html">Home</a>
+            </li>
+            <li class="NavImg">
+                <img class="ImgStyle" src="https://i.pinimg.com/originals/b4/21/61/b4216147c4d4d914152b615b8544c7cf.png" alt="Img Failed">
+            </li>
         </ul>
     </div>
-
-
 </body>
 </html>
