--- a/AboutUs.html
+++ b/AboutUs.html
@@ -23,5 +23,17 @@
             </li>
         </ul>
     </div>
+    <div class="aboutus">
+    <h1>About Us</h1>
+    <br>
+        <div class="aboutusrow">
+            <div class="aboutuscolumn img">
+                <img src="https://ae01.alicdn.com/kf/Hac85fad0ffbb4fa68314b2bfc87fbf740.jpg" alt="Chicken Holiday">
+            </div>
+            <div class="aboutuscolumn text">
+                <p>About US</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
