AboutUs First Version
This is the first complete version of the about us page with all aspects.
This page is not set and can be updated and changed at any time

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -6,7 +6,7 @@
     <title>About Us</title>
     <link rel="stylesheet" href="Style.Css">
 </head>
-<body>
+<body style="background-color: rgb(231, 186, 101);">
     <div>
         <ul>
             <li class="Nav">
@@ -31,7 +31,22 @@
                 <img src="https://ae01.alicdn.com/kf/Hac85fad0ffbb4fa68314b2bfc87fbf740.jpg" alt="Chicken Holiday">
             </div>
             <div class="aboutuscolumn text">
-                <p>About US</p>
+                <p>
+                    <strong style="font-size: 25px;">Who are we</strong><br>
+                    We are a travel agency created in 2020 specializing in holidays for your special chicken. From going on international trips to just local adventures we can do it all to make sure your chicken has the best experience possible. 
+                </p>
+                <br>
+                <p>
+                    <strong style="font-size: 25px;">What do we do</strong><br>
+                    We can do a lot of things but our main goal is handcrafting an experience that your chicken can enjoy. We accomplish this in many ways but the first step is setting up the chickens spiritual scope so that we may communicate with it and find the best holiday after we have established a connection we can plan out the perfect trip for your chicken and send them on there way to happiness.
+                </p>
+                <br>
+                <p>
+                    <strong style="font-size: 25px;">Contact Us</strong><br>
+                    <strong>Email: </strong>chickenagent@travelmail.com<br>
+                    <strong>Mobile: </strong>0216547841<br>
+                    <strong>Address: </strong>182 Broadway, Newmarket, Auckland 1023
+                </p>
             </div>
         </div>
     </div>
