--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,90 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link rel="stylesheet" href="Style.Css">
-</head>
-<body style="background-color: rgb(231, 186, 101);">
-    <div>
-        <ul>
-            <li class="Nav">
-                <a href="AboutUs.html">About Us</a>
-            </li>
-            <li class="Nav">
-                <a href="Offers.html">Offers</a>
-            </li>
-            <li class="Nav">
-                <a href="index.html">Home</a>
-            </li>
-            <li class="NavImg">
-                <img class="ImgStyle" src="https://i.pinimg.com/originals/b4/21/61/b4216147c4d4d914152b615b8544c7cf.png" alt="Img Failed">
-            </li>
-        </ul>
-    </div>
-
-
-
-    <div class="aboutus"> <!--Class CSS to change aspects of the whole page-->
-
-
-
-    <h1>About Us</h1> <!--Page main Title-->
-
-
-
-    <br>
-
-
-
-        <div class="aboutusrow"> <!--Define class for the Columns row-->
-
-
-
-            <div class="aboutuscolumn img"> <!--Define Class for imgae column-->
-                <img src="https://ae01.alicdn.com/kf/Hac85fad0ffbb4fa68314b2bfc87fbf740.jpg" alt="Chicken Holiday">
-            </div>
-
-
-
-            <div class="aboutuscolumn text"> <!--Define Class for text column-->
-
-
-                <!--Who are we-->
-                <p>
-                    <strong style="font-size: 25px;">Who are we</strong><br>
-                    We are a travel agency created in 2020 specializing in holidays for your special chicken. From going on international trips to just local adventures we can do it all to make sure your chicken has the best experience possible. 
-                </p>
-
-
-
-                <br>
-
-
-                <!--What do we do-->
-                <p>
-                    <strong style="font-size: 25px;">What do we do</strong><br>
-                    We can do a lot of things but our main goal is handcrafting an experience that your chicken can enjoy. We accomplish this in many ways but the first step is setting up the chickens spiritual scope so that we may communicate with it and find the best holiday after we have established a connection we can plan out the perfect trip for your chicken and send them on there way to happiness.
-                </p>
-
-
-
-                <br>
-
-
-                <!--Contact-->
-                <p>
-                    <strong style="font-size: 25px;">Contact Us</strong><br>
-                    <strong>Email: </strong>chickenagent@travelmail.com<br>
-                    <strong>Mobile: </strong>0216547841<br>
-                    <strong>Address: </strong>182 Broadway, Newmarket, Auckland 1023
-                </p>
-
-
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About Us</title>
+        <link rel="stylesheet" href="Style.Css">
+    </head>
+    <body style="background-color: rgb(231, 186, 101);">
+        <div>
+            <ul>
+                <li class="Nav">
+                    <a href="AboutUs.html">About Us</a>
+                </li>
+                <li class="Nav">
+                    <a href="Offers.html">Offers</a>
+                </li>
+                <li class="Nav">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="NavImg">
+                    <img class="ImgStyle" src="https://i.pinimg.com/originals/b4/21/61/b4216147c4d4d914152b615b8544c7cf.png" alt="Img Failed">
+                </li>
+            </ul>
+        </div>
+        <div class="aboutus">
+            <!--Class CSS to change aspects of the whole page-->
+            <h1>About Us</h1>
+            <!--Page main Title-->
+            <br>
+            <div class="aboutusrow">
+                <!--Define class for the Columns row-->
+                <div class="aboutuscolumn img">
+                    <!--Define Class for imgae column-->
+                    <img src="https://ae01.alicdn.com/kf/Hac85fad0ffbb4fa68314b2bfc87fbf740.jpg" alt="Chicken Holiday">
+                </div>
+                <div class="aboutuscolumn text">
+                    <!--Define Class for text column-->
+                    <!--Who are we-->
+                    <p>
+                        <strong style="font-size: 25px;">Who are we</strong><br>
+                        We are a travel agency created in 2020 specializing in holidays for your special chicken. From going on international trips to just local adventures we can do it all to make sure your chicken has the best experience possible. 
+                    </p>
+                    <br>
+                    <!--What do we do-->
+                    <p>
+                        <strong style="font-size: 25px;">What do we do</strong><br>
+                        We can do a lot of things but our main goal is handcrafting an experience that your chicken can enjoy. We accomplish this in many ways but the first step is setting up the chickens spiritual scope so that we may communicate with it and find the best holiday after we have established a connection we can plan out the perfect trip for your chicken and send them on there way to happiness.
+                    </p>
+                    <br>
+                    <!--Contact-->
+                    <p>
+                        <strong style="font-size: 25px;">Contact Us</strong><br>
+                        <strong>Email: </strong>chickenagent@travelmail.com<br>
+                        <strong>Mobile: </strong>0216547841<br>
+                        <strong>Address: </strong>182 Broadway, Newmarket, Auckland 1023
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
