--- a/Offers.html
+++ b/Offers.html
@@ -16,7 +16,7 @@
             <li class="NavImg"><img class="ImgStyle" src="https://i.pinimg.com/originals/b4/21/61/b4216147c4d4d914152b615b8544c7cf.png" alt="Img Failed"></li>
         </ul>
     </div>
-    <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search..">
+    <input type="text" id="mySearch" onkeyup="doSearch()" placeholder="Search..">
     <section id="popupcontainer">
         <h1 class="type_of_trip_indicator">Domestic holiday</h1>
 
